change in pakage.json line

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://Mr-Bilal.gitub.io/Portfolio",
+  "homepage":"https://Mr-Bilal.gitub.io/MyPortfolio",
   "name": "newportfolio",
   "version": "0.1.0",
   "private": true,
